--- a/content/poc-vs-mvp.yaml
+++ b/content/poc-vs-mvp.yaml
@@ -2,7 +2,7 @@ slug: poc-vs-mvp
 title: POC vs MVP
 thesis: A POC cuts corners but not scope. An MVP cuts scope but not corners.
 bullets:
-  - A proof of concept exists to answer a single question: can this work at all.
+  - A proof of concept exists to answer a single question: can this work at all?
   - POCs preserve scope just enough to validate feasibility, while allowing poor structure, hacks, and shortcuts.
   - A minimum viable product exists to deliver real value to real users.
   - MVPs aggressively reduce scope, but the code must be correct, maintainable, and safe to evolve.
